# AstroPepito

./: .gitignore  CMakeLists.txt  README.md
HDUInspector/: CMakeLists.txt
HDUInspector/src/: hdu_inspector.cpp  hdu_inspector.h  main.cpp
ImageProcessor/: CMakeLists.txt
ImageProcessor/src/: image_processing.cpp  image_processing.h  main.cpp
data/ngc7293/: ngc7293_b.fits  ngc7293_g.fits  ngc7293_l.fits  ngc7293_r.fits
